// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dkrGVk gCmCNv"
>
  <div
    class="sc-eDvSBu dIjuMb"
  >
    <span
      class="sc-jSVbBN"
    >
      0
    </span>
    <span
      class="sc-gKPSAk kUFSPr"
    >
      42
    </span>
  </div>
  <button
    class="sc-bcXGWu sc-gswPWN kBQwid ktaLLy"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dkrGVk gCmCNv"
>
  <div
    class="sc-hLBbCX diUyuG"
  >
    🛌🛌
  </div>
  <button
    class="sc-bcXGWu sc-gswPWN hwKOti ktaLLy"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dkrGVk gCmCNv"
>
  <div
    class="sc-hLBbCX diUyuG"
  >
    🍅
  </div>
  <button
    class="sc-bcXGWu sc-gswPWN hwKOti ktaLLy"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dkrGVk gCmCNv"
>
  <div
    class="sc-hLBbCX diUyuG"
  >
    🛌
  </div>
  <button
    class="sc-bcXGWu sc-gswPWN hwKOti ktaLLy"
  >
    Start
  </button>
</div>
`;
